CNV-39752: Button to expand all sections

--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -20,6 +20,7 @@
   "Cannot delete in view-only mode": "Cannot delete in view-only mode",
   "Cannot edit in view-only mode": "Cannot edit in view-only mode",
   "Click <1>Create NodeNetworkConfigurationPolicy</1> to create your first policy": "Click <1>Create NodeNetworkConfigurationPolicy</1> to create your first policy",
+  "Collapse all": "Collapse all",
   "Confirm deletion by typing <1>{{name}}</1> below:": "Confirm deletion by typing <1>{{name}}</1> below:",
   "Copied": "Copied",
   "Copy": "Copy",
@@ -51,6 +52,7 @@
   "Enactment states": "Enactment states",
   "Enactments categorized by status": "Enactments categorized by status",
   "Enter name": "Enter name",
+  "Expand all": "Expand all",
   "Explore {{kind}} list": "Explore {{kind}} list",
   "Failing": "Failing",
   "Features": "Features",
