--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -98,7 +98,7 @@
   "No node network configuration policies defined yet": "No node network configuration policies defined yet",
   "No NodeNetworkStates found": "No NodeNetworkStates found",
   "No owner": "No owner",
-  "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
+  "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
   "Node Selector": "Node Selector",
   "NodeNetworkConfigurationPolicy": "NodeNetworkConfigurationPolicy",
   "NodeNetworkState": "NodeNetworkState",
