--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -8,6 +8,7 @@
   "Actions": "Actions",
   "Add another interface to the policy": "Add another interface to the policy",
   "Add Label": "Add Label",
+  "Add mapping": "Add mapping",
   "Add Option": "Add Option",
   "Aggregation mode": "Aggregation mode",
   "An error occurred": "An error occurred",
@@ -98,13 +99,16 @@
   "No node network configuration policies defined yet": "No node network configuration policies defined yet",
   "No NodeNetworkStates found": "No NodeNetworkStates found",
   "No owner": "No owner",
-  "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
+  "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
   "Node Selector": "Node Selector",
   "NodeNetworkConfigurationPolicy": "NodeNetworkConfigurationPolicy",
   "NodeNetworkState": "NodeNetworkState",
   "nodes": "nodes",
   "None": "None",
   "Not available": "Not available",
+  "Open vSwitch bridge mapping": "Open vSwitch bridge mapping",
+  "OVN localnet name": "OVN localnet name",
+  "OVS bridge name": "OVS bridge name",
   "Owner": "Owner",
   "Pending": "Pending",
   "Please <2>try again</2>.": "Please <2>try again</2>.",
@@ -135,6 +139,7 @@
   "System Description": "System Description",
   "System Name": "System Name",
   "Tech preview": "Tech preview",
+  "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.": "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.",
   "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to": "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to",
   "This node already has a policy matching it": "This node already has a policy matching it",
   "This policy must be edited via YAML": "This policy must be edited via YAML",
