OCPBUGS-55292: avoid empty bridge mapping

--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -1,11 +1,25 @@
 {
+  "(IPv4)": "(IPv4)",
   "{{annotationsCount}} Annotations": "{{annotationsCount}} Annotations",
+  "{{count}} aborted enactments_one": "{{count}} aborted enactments",
+  "{{count}} aborted enactments_other": "{{count}} aborted enactments",
+  "{{count}} available enactments_one": "{{count}} available enactments",
+  "{{count}} available enactments_other": "{{count}} available enactments",
+  "{{count}} failing enactments_one": "{{count}} failing enactments",
+  "{{count}} failing enactments_other": "{{count}} failing enactments",
+  "{{count}} pending enactments_one": "{{count}} pending enactments",
+  "{{count}} pending enactments_other": "{{count}} pending enactments",
+  "{{count}} progressing enactments_one": "{{count}} progressing enactments",
+  "{{count}} progressing enactments_other": "{{count}} progressing enactments",
+  "{{interfaceType}} name": "{{interfaceType}} name",
+  "{{label}} name": "{{label}} name",
   "{{matchingNodeText}} matching": "{{matchingNodeText}} matching",
   "{{modelName}} details": "{{modelName}} details",
   "{{qualifiedNodesCount}} matching Nodes found": "{{qualifiedNodesCount}} matching Nodes found",
   "<0>List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller.</0><1><0>{{kind}}</0><1>metadata</1><2>ownerReferences</2></1>": "<0>List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller.</0><1><0>{{kind}}</0><1>metadata</1><2>ownerReferences</2></1>",
   "Aborted": "Aborted",
   "Actions": "Actions",
+  "Add another {{label}} interface": "Add another {{label}} interface",
   "Add another interface to the policy": "Add another interface to the policy",
   "Add Label": "Add Label",
   "Add mapping": "Add mapping",
@@ -13,6 +27,8 @@
   "Aggregation mode": "Aggregation mode",
   "An error occurred": "An error occurred",
   "Annotations": "Annotations",
+  "Applies to all nodes": "Applies to all nodes",
+  "Applies to nodes with hostname: ": "Applies to nodes with hostname: ",
   "Apply this NodeNetworkConfigurationPolicy only to specific subsets of nodes using the node selector": "Apply this NodeNetworkConfigurationPolicy only to specific subsets of nodes using the node selector",
   "Are you sure you want to remove {{interfaceType}} interface <5>{{name}}</5>?": "Are you sure you want to remove {{interfaceType}} interface <5>{{name}}</5>?",
   "Auto-DNS": "Auto-DNS",
@@ -20,6 +36,14 @@
   "Auto-routes": "Auto-routes",
   "Available": "Available",
   "Base interface": "Base interface",
+  "Basic interfaces": "Basic interfaces",
+  "Basic policy info": "Basic policy info",
+  "Best for straightforward bridging using the built-in Linux functionality.": "Best for straightforward bridging using the built-in Linux functionality.",
+  "Bonding": "Bonding",
+  "Bonding configuration": "Bonding configuration",
+  "Bridge configuration": "Bridge configuration",
+  "Bridge type": "Bridge type",
+  "Bridging": "Bridging",
   "Cancel": "Cancel",
   "Cannot delete in view-only mode": "Cannot delete in view-only mode",
   "Cannot edit in view-only mode": "Cannot edit in view-only mode",
@@ -33,6 +57,7 @@
   "Create": "Create",
   "Create NodeNetworkConfigurationPolicy": "Create NodeNetworkConfigurationPolicy",
   "Create NodeNetworkConfigurationPolicy error": "Create NodeNetworkConfigurationPolicy error",
+  "Create policy": "Create policy",
   "Created at": "Created at",
   "Created interfaces cannot be removed": "Created interfaces cannot be removed",
   "Delete": "Delete",
@@ -49,22 +74,30 @@
   "Download YAML": "Download YAML",
   "Edit": "Edit",
   "Edit NodeNetworkConfigurationPolicy": "Edit NodeNetworkConfigurationPolicy",
+  "Edit step": "Edit step",
   "Edit the STP in the YAML file": "Edit the STP in the YAML file",
   "Edit using YAML": "Edit using YAML",
   "Edit YAML": "Edit YAML",
+  "Empty bridge mapping is not allowed": "Empty bridge mapping is not allowed",
   "Enable STP": "Enable STP",
   "Enabled": "Enabled",
   "Enactment states": "Enactment states",
+  "Enactments": "Enactments",
   "Enactments categorized by status": "Enactments categorized by status",
   "Enter name": "Enter name",
   "Error details": "Error details",
+  "Ethernet": "Ethernet",
+  "Ethernet configuration": "Ethernet configuration",
   "Expand all": "Expand all",
   "Explore {{kind}} list": "Explore {{kind}} list",
   "Failing": "Failing",
   "Features": "Features",
   "Filter": "Filter",
   "From Form": "From Form",
+  "General": "General",
+  "Host network configuration": "Host network configuration",
   "Id": "Id",
+  "Ideal for environments needing advanced, software-defined networking features.": "Ideal for environments needing advanced, software-defined networking features.",
   "Interface name": "Interface name",
   "Interface name should follow the linux kernel naming convention. The name should be smaller than 16 characters.": "Interface name should follow the linux kernel naming convention. The name should be smaller than 16 characters.",
   "Interface name should follow the linux kernel naming convention. Whitespaces and slashes are not allowed.": "Interface name should follow the linux kernel naming convention. Whitespaces and slashes are not allowed.",
@@ -86,6 +119,7 @@
   "LLDP VLAN name": "LLDP VLAN name",
   "MAC address": "MAC address",
   "MAC Address": "MAC Address",
+  "Make sure all of your configuration details are correct before deploying the policy.": "Make sure all of your configuration details are correct before deploying the policy.",
   "Matched nodes": "Matched nodes",
   "Matched nodes summary": "Matched nodes summary",
   "More info: ": "More info: ",
@@ -95,26 +129,32 @@
   "Network details": "Network details",
   "Network interface": "Network interface",
   "Network state": "Network state",
+  "Network state controls whether the Linux bridge is active and participating in network traffic.": "Network state controls whether the Linux bridge is active and participating in network traffic.",
+  "No": "No",
   "No matching Nodes found for the labels": "No matching Nodes found for the labels",
-  "No node network configuration policies defined yet": "No node network configuration policies defined yet",
+  "No NodeNetworkConfigurationPolicy defined yet": "No NodeNetworkConfigurationPolicy defined yet",
   "No NodeNetworkStates found": "No NodeNetworkStates found",
   "No owner": "No owner",
   "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
+  "Node selector": "Node selector",
   "Node Selector": "Node Selector",
   "NodeNetworkConfigurationPolicy": "NodeNetworkConfigurationPolicy",
   "NodeNetworkState": "NodeNetworkState",
   "nodes": "nodes",
   "None": "None",
   "Not available": "Not available",
+  "Number of nodes matched": "Number of nodes matched",
   "Open vSwitch bridge mapping": "Open vSwitch bridge mapping",
   "OVN localnet name": "OVN localnet name",
   "OVS bridge name": "OVS bridge name",
   "Owner": "Owner",
   "Pending": "Pending",
   "Please <2>try again</2>.": "Please <2>try again</2>.",
+  "Policy description": "Policy description",
   "Policy details": "Policy details",
   "Policy interface": "Policy interface",
   "Policy Interface(s)": "Policy Interface(s)",
+  "Policy interfaces": "Policy interfaces",
   "Policy name": "Policy name",
   "Port": "Port",
   "Port name": "Port name",
@@ -126,6 +166,8 @@
   "Remove interface": "Remove interface",
   "Remove label selector": "Remove label selector",
   "Restricted Access": "Restricted Access",
+  "Review": "Review",
+  "Review and create": "Review and create",
   "Save": "Save",
   "Scheduling will not be possible at this state": "Scheduling will not be possible at this state",
   "Search": "Search",
@@ -133,18 +175,27 @@
   "Search by LLDP system name...": "Search by LLDP system name...",
   "Search by MAC address...": "Search by MAC address...",
   "Search by VLAN name...": "Search by VLAN name...",
+  "Select a bridge type below to determine how your network traffic will be handled.": "Select a bridge type below to determine how your network traffic will be handled.",
   "selector key": "selector key",
   "selector value": "selector value",
   "Server": "Server",
+  "STP enabled": "STP enabled",
+  "System description": "System description",
   "System Description": "System Description",
+  "System name": "System name",
   "System Name": "System Name",
   "Tech preview": "Tech preview",
+  "The interface is active and passing traffic.": "The interface is active and passing traffic.",
+  "The interface is inactive but configured.": "The interface is inactive but configured.",
+  "The interface is removed from the configuration.": "The interface is removed from the configuration.",
   "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.": "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.",
+  "This allows you to specify how the ethernet interface obtains an IPv4 address—either dynamically (DHCP) or by assigning a static IP and subnet.": "This allows you to specify how the ethernet interface obtains an IPv4 address—either dynamically (DHCP) or by assigning a static IP and subnet.",
   "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to": "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to",
   "This node already has a policy matching it": "This node already has a policy matching it",
   "This policy must be edited via YAML": "This policy must be edited via YAML",
   "To edit this policy, contact your administrator.": "To edit this policy, contact your administrator.",
   "Type": "Type",
+  "Underlying interface": "Underlying interface",
   "Up": "Up",
   "Use commas to separate ports": "Use commas to separate ports",
   "Value": "Value",
@@ -154,6 +205,7 @@
   "VLANS": "VLANS",
   "With YAML": "With YAML",
   "YAML": "YAML",
+  "Yes": "Yes",
   "You don't have access to this section due to cluster policy.": "You don't have access to this section due to cluster policy.",
   "You're in view-only mode": "You're in view-only mode"
 }
