Add a legend to the topology view

--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -39,8 +39,10 @@
   "Basic interfaces": "Basic interfaces",
   "Basic policy info": "Basic policy info",
   "Best for straightforward bridging using the built-in Linux functionality.": "Best for straightforward bridging using the built-in Linux functionality.",
+  "Bond": "Bond",
   "Bonding": "Bonding",
   "Bonding configuration": "Bonding configuration",
+  "Bridge": "Bridge",
   "Bridge configuration": "Bridge configuration",
   "Bridge type": "Bridge type",
   "Bridging": "Bridging",
@@ -95,7 +97,6 @@
   "Filter": "Filter",
   "From Form": "From Form",
   "General": "General",
-  "Host network configuration": "Host network configuration",
   "Id": "Id",
   "Ideal for environments needing advanced, software-defined networking features.": "Ideal for environments needing advanced, software-defined networking features.",
   "Interface name": "Interface name",
@@ -135,6 +136,7 @@
   "No NodeNetworkConfigurationPolicy defined yet": "No NodeNetworkConfigurationPolicy defined yet",
   "No NodeNetworkStates found": "No NodeNetworkStates found",
   "No owner": "No owner",
+  "Node network configuration": "Node network configuration",
   "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
   "Node selector": "Node selector",
   "Node Selector": "Node Selector",
@@ -145,6 +147,7 @@
   "Not available": "Not available",
   "Number of nodes matched": "Number of nodes matched",
   "Open vSwitch bridge mapping": "Open vSwitch bridge mapping",
+  "Other network type": "Other network type",
   "OVN localnet name": "OVN localnet name",
   "OVS bridge name": "OVS bridge name",
   "Owner": "Owner",
