CNV-64896: fix typos of "network"

--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -137,7 +137,7 @@
   "No NodeNetworkStates found": "No NodeNetworkStates found",
   "No owner": "No owner",
   "Node network configuration": "Node network configuration",
-  "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node netowrk configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the netwrok policies enacted upon each node.",
+  "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the network policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the network policies enacted upon each node.",
   "Node selector": "Node selector",
   "Node Selector": "Node Selector",
   "NodeNetworkConfigurationPolicy": "NodeNetworkConfigurationPolicy",
