Refactor NodeNetworkConfigurationPolicy wizard

--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -17,10 +17,9 @@
   "{{modelName}} details": "{{modelName}} details",
   "{{qualifiedNodesCount}} matching Nodes found": "{{qualifiedNodesCount}} matching Nodes found",
   "<0>List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller.</0><1><0>{{kind}}</0><1>metadata</1><2>ownerReferences</2></1>": "<0>List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller.</0><1><0>{{kind}}</0><1>metadata</1><2>ownerReferences</2></1>",
+  "A single interface": "A single interface",
   "Aborted": "Aborted",
   "Actions": "Actions",
-  "Add {{label}} interface": "Add {{label}} interface",
-  "Add another {{label}} interface": "Add another {{label}} interface",
   "Add another interface to the policy": "Add another interface to the policy",
   "Add Label": "Add Label",
   "Add mapping": "Add mapping",
@@ -30,38 +29,50 @@
   "Annotations": "Annotations",
   "Applies to all nodes": "Applies to all nodes",
   "Applies to nodes with hostname: ": "Applies to nodes with hostname: ",
-  "Apply this NodeNetworkConfigurationPolicy only to specific subsets of nodes using the node selector": "Apply this NodeNetworkConfigurationPolicy only to specific subsets of nodes using the node selector",
+  "Apply this only to specific subsets of nodes using the node selector": "Apply this only to specific subsets of nodes using the node selector",
+  "Apply to all the nodes on the cluster": "Apply to all the nodes on the cluster",
+  "Apply to specific subsets of Nodes using the Nodes selector": "Apply to specific subsets of Nodes using the Nodes selector",
   "Are you sure you want to remove {{interfaceType}} interface <5>{{name}}</5>?": "Are you sure you want to remove {{interfaceType}} interface <5>{{name}}</5>?",
   "Auto-DNS": "Auto-DNS",
   "Auto-gateway": "Auto-gateway",
   "Auto-routes": "Auto-routes",
   "Available": "Available",
   "Base interface": "Base interface",
-  "Basic interfaces": "Basic interfaces",
+  "Basic information": "Basic information",
   "Basic policy info": "Basic policy info",
   "Best for straightforward bridging using the built-in Linux functionality.": "Best for straightforward bridging using the built-in Linux functionality.",
   "Bond": "Bond",
-  "Bonding": "Bonding",
   "Bonding configuration": "Bonding configuration",
+  "Bonding interface": "Bonding interface",
+  "Bonding name": "Bonding name",
   "Bridge": "Bridge",
   "Bridge configuration": "Bridge configuration",
+  "Bridge name": "Bridge name",
   "Bridge type": "Bridge type",
-  "Bridging": "Bridging",
   "Cancel": "Cancel",
   "Cannot delete in view-only mode": "Cannot delete in view-only mode",
   "Cannot edit in view-only mode": "Cannot edit in view-only mode",
   "Click <1>Create NodeNetworkConfigurationPolicy</1> to create your first policy": "Click <1>Create NodeNetworkConfigurationPolicy</1> to create your first policy",
+  "ClusterUserDefinedNetwork": "ClusterUserDefinedNetwork",
+  "ClusterUserDefinedNetworks": "ClusterUserDefinedNetworks",
   "Collapse all": "Collapse all",
+  "Configure bond network interfaces to access the outside physical network, to achieve better resilience and higher total throughput.": "Configure bond network interfaces to access the outside physical network, to achieve better resilience and higher total throughput.",
+  "Configure the core settings for your new network bridge.": "Configure the core settings for your new network bridge.",
   "Confirm deletion by typing <1>{{name}}</1> below:": "Confirm deletion by typing <1>{{name}}</1> below:",
+  "Conflicting configurations ({{conflictingConfigCount}})": "Conflicting configurations ({{conflictingConfigCount}})",
   "Copied": "Copied",
   "Copy": "Copy",
   "Copy MAC address": "Copy MAC address",
   "Copy YAML to clipboard": "Copy YAML to clipboard",
   "Create": "Create",
+  "Create another node network configuration": "Create another node network configuration",
+  "Create network": "Create network",
   "Create NodeNetworkConfigurationPolicy": "Create NodeNetworkConfigurationPolicy",
-  "Create policy": "Create policy",
+  "Create NodeNetworkConfigurationPolicy error": "Create NodeNetworkConfigurationPolicy error",
   "Created at": "Created at",
   "Created interfaces cannot be removed": "Created interfaces cannot be removed",
+  "Default node network": "Default node network",
+  "Defines how multiple interfaces work for loading balancing or failover.": "Defines how multiple interfaces work for loading balancing or failover.",
   "Delete": "Delete",
   "Delete NodeNetworkConfigurationPolicy?": "Delete NodeNetworkConfigurationPolicy?",
   "Delete NodeNetworkConfigurationPolicyInterface?": "Delete NodeNetworkConfigurationPolicyInterface?",
@@ -74,11 +85,13 @@
   "Display all {{status}} enactments": "Display all {{status}} enactments",
   "Down": "Down",
   "Download YAML": "Download YAML",
+  "Each node network configuration must apply to a unique set of Nodes.": "Each node network configuration must apply to a unique set of Nodes.",
   "Edit": "Edit",
   "Edit NodeNetworkConfigurationPolicy": "Edit NodeNetworkConfigurationPolicy",
   "Edit step": "Edit step",
   "Edit the STP in the YAML file": "Edit the STP in the YAML file",
   "Edit using YAML": "Edit using YAML",
+  "Edit YAML": "Edit YAML",
   "Empty bridge mapping is not allowed": "Empty bridge mapping is not allowed",
   "Enable STP": "Enable STP",
   "Enabled": "Enabled",
@@ -91,7 +104,9 @@
   "Ethernet configuration": "Ethernet configuration",
   "Expand all": "Expand all",
   "Explore {{kind}} list": "Explore {{kind}} list",
+  "Explore Node list": "Explore Node list",
   "Failing": "Failing",
+  "Failover results in loss of guest network connectivity.": "Failover results in loss of guest network connectivity.",
   "Features": "Features",
   "Filter": "Filter",
   "From Form": "From Form",
@@ -99,6 +114,7 @@
   "Id": "Id",
   "Ideal for environments needing advanced, software-defined networking features.": "Ideal for environments needing advanced, software-defined networking features.",
   "Interface name": "Interface name",
+  "Interface name should follow the linux kernel naming convention. The name should be 15 characters or less.": "Interface name should follow the linux kernel naming convention. The name should be 15 characters or less.",
   "Interface name should follow the linux kernel naming convention. The name should be smaller than 16 characters.": "Interface name should follow the linux kernel naming convention. The name should be smaller than 16 characters.",
   "Interface name should follow the linux kernel naming convention. Whitespaces and slashes are not allowed.": "Interface name should follow the linux kernel naming convention. Whitespaces and slashes are not allowed.",
   "Interface state": "Interface state",
@@ -114,22 +130,33 @@
   "Labels": "Labels",
   "Learn more": "Learn more",
   "Legend": "Legend",
+  "Let&apos;s configure Open vSwitch (OVS). First, to allow VirtualMachines (VMs) to connect to the data center network, a bridge must be created on the nodes. Then, you can expose access to the data center network through this bridge by defining a new VM network.": "Let&apos;s configure Open vSwitch (OVS). First, to allow VirtualMachines (VMs) to connect to the data center network, a bridge must be created on the nodes. Then, you can expose access to the data center network through this bridge by defining a new VM network.",
+  "Linux Bonding - 802.3ad / LACP (Mode 4)": "Linux Bonding - 802.3ad / LACP (Mode 4)",
+  "Linux Bonding - Active / Backup (Mode 1)": "Linux Bonding - Active / Backup (Mode 1)",
+  "Linux Bonding - Balance XOR (Mode 2)": "Linux Bonding - Balance XOR (Mode 2)",
   "List of network interfaces that should be created, modified, or removed, as a part of this policy.": "List of network interfaces that should be created, modified, or removed, as a part of this policy.",
   "LLDP": "LLDP",
   "LLDP system name": "LLDP system name",
   "LLDP VLAN name": "LLDP VLAN name",
+  "Load balancing, no switch config": "Load balancing, no switch config",
   "MAC address": "MAC address",
   "MAC Address": "MAC Address",
+  "MAC-based load balancing, requires static Etherchannel enabled": "MAC-based load balancing, requires static Etherchannel enabled",
+  "Make sure all of your configuration details are correct before creating the network.": "Make sure all of your configuration details are correct before creating the network.",
   "Make sure all of your configuration details are correct before deploying the policy.": "Make sure all of your configuration details are correct before deploying the policy.",
   "Matched nodes": "Matched nodes",
   "Matched nodes summary": "Matched nodes summary",
   "More info: ": "More info: ",
   "MTU": "MTU",
+  "Must have at least two interfaces.": "Must have at least two interfaces.",
   "Name": "Name",
   "Name already in use by another interface": "Name already in use by another interface",
   "Neighbors": "Neighbors",
+  "Network description": "Network description",
   "Network details": "Network details",
+  "Network identity": "Network identity",
   "Network interface": "Network interface",
+  "Network interfaces": "Network interfaces",
   "Network state": "Network state",
   "Network state controls whether the Linux bridge is active and participating in network traffic.": "Network state controls whether the Linux bridge is active and participating in network traffic.",
   "Network types": "Network types",
@@ -139,27 +166,34 @@
   "No NodeNetworkStates found": "No NodeNetworkStates found",
   "No owner": "No owner",
   "Node network configuration": "Node network configuration",
+  "Node network configuration name": "Node network configuration name",
   "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the network policies enacted upon each node.": "Node network is configured and managed by NM state. Create a node network configuration policy to describe the requested network configuration on your nodes in the cluster. The node network configuration enactment reports the network policies enacted upon each node.",
   "Node selector": "Node selector",
   "Node Selector": "Node Selector",
   "NodeNetworkConfigurationPolicy": "NodeNetworkConfigurationPolicy",
   "NodeNetworkState": "NodeNetworkState",
   "nodes": "nodes",
+  "Nodes configuration": "Nodes configuration",
+  "Nodes overlap detected": "Nodes overlap detected",
   "None": "None",
   "Not available": "Not available",
+  "Not found": "Not found",
   "Number of nodes matched": "Number of nodes matched",
+  "One active, others standby, simple": "One active, others standby, simple",
   "Open vSwitch bridge mapping": "Open vSwitch bridge mapping",
+  "Open vSwitch LSB - source load balancing": "Open vSwitch LSB - source load balancing",
   "Other network type": "Other network type",
+  "Overlapping nodes": "Overlapping nodes",
   "OVN localnet name": "OVN localnet name",
   "OVS bridge name": "OVS bridge name",
   "Owner": "Owner",
   "Pending": "Pending",
+  "Physical network name": "Physical network name",
   "Please <2>try again</2>.": "Please <2>try again</2>.",
   "Policy description": "Policy description",
   "Policy details": "Policy details",
   "Policy interface": "Policy interface",
   "Policy Interface(s)": "Policy Interface(s)",
-  "Policy interfaces": "Policy interfaces",
   "Policy name": "Policy name",
   "Port": "Port",
   "Port name": "Port name",
@@ -170,20 +204,29 @@
   "Remove all dependencies between the new and existing polices": "Remove all dependencies between the new and existing polices",
   "Remove interface": "Remove interface",
   "Remove label selector": "Remove label selector",
+  "Require switch configuration to establish an \"EtherChannel\" or similar port grouping.": "Require switch configuration to establish an \"EtherChannel\" or similar port grouping.",
   "Restricted Access": "Restricted Access",
   "Review": "Review",
   "Review and create": "Review and create",
   "Save": "Save",
   "Scheduling will not be possible at this state": "Scheduling will not be possible at this state",
   "Search": "Search",
+  "Search and select from the list": "Search and select from the list",
+  "Search and select from the list. Multiple options can be selected.": "Search and select from the list. Multiple options can be selected.",
   "Search by IP address...": "Search by IP address...",
   "Search by LLDP system name...": "Search by LLDP system name...",
   "Search by MAC address...": "Search by MAC address...",
   "Search by VLAN name...": "Search by VLAN name...",
   "Select a bridge type below to determine how your network traffic will be handled.": "Select a bridge type below to determine how your network traffic will be handled.",
+  "Select from the list": "Select from the list",
+  "Select the network interface to access the outside physical network.": "Select the network interface to access the outside physical network.",
+  "Select the network uplink that will provide connectivity to the physical network.": "Select the network uplink that will provide connectivity to the physical network.",
   "selector key": "selector key",
   "selector value": "selector value",
   "Server": "Server",
+  "Settings": "Settings",
+  "Some of the selected Nodes are already assigned to {{nodeNetworkName}} in another configuration.": "Some of the selected Nodes are already assigned to {{nodeNetworkName}} in another configuration.",
+  "Standard link aggregation, requires LACP Etherchannel enabled": "Standard link aggregation, requires LACP Etherchannel enabled",
   "STP enabled": "STP enabled",
   "System description": "System description",
   "System Description": "System Description",
@@ -193,17 +236,27 @@
   "The interface is active and passing traffic.": "The interface is active and passing traffic.",
   "The interface is inactive but configured.": "The interface is inactive but configured.",
   "The interface is removed from the configuration.": "The interface is removed from the configuration.",
+  "The largest size of a data packet, in bytes, that can be transmitted across this network. It is critical that the entire underlying physical network infrastructure also supports the same or larger MTU size to avoid packet fragmentation and connectivity issues.": "The largest size of a data packet, in bytes, that can be transmitted across this network. It is critical that the entire underlying physical network infrastructure also supports the same or larger MTU size to avoid packet fragmentation and connectivity issues.",
   "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.": "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.",
+  "The selected secondary interface is configured with an IP address on some of the nodes.": "The selected secondary interface is configured with an IP address on some of the nodes.",
+  "These network interfaces will be bonded together. The list contains unused network interfaces available on all of the selected nodes.<1></1>Unused network interfaces available on all of the selected nodes.": "These network interfaces will be bonded together. The list contains unused network interfaces available on all of the selected nodes.<1></1>Unused network interfaces available on all of the selected nodes.",
   "This allows you to specify how the ethernet interface obtains an IPv4 address—either dynamically (DHCP) or by assigning a static IP and subnet.": "This allows you to specify how the ethernet interface obtains an IPv4 address—either dynamically (DHCP) or by assigning a static IP and subnet.",
   "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to": "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to",
+  "This name is already in use. Use a different name to continue.": "This name is already in use. Use a different name to continue.",
   "This node already has a policy matching it": "This node already has a policy matching it",
   "This policy must be edited via YAML": "This policy must be edited via YAML",
+  "To avoid breaking the default node network ensure the selected interface is free, properly connected to a switch, and not used by another node network.": "To avoid breaking the default node network ensure the selected interface is free, properly connected to a switch, and not used by another node network.",
   "To edit this policy, contact your administrator.": "To edit this policy, contact your administrator.",
   "Type": "Type",
   "Underlying interface": "Underlying interface",
+  "Unused network interfaces available on all of the selected nodes": "Unused network interfaces available on all of the selected nodes",
   "Up": "Up",
+  "Uplink connection": "Uplink connection",
   "Use commas to separate ports": "Use commas to separate ports",
+  "Use the default node network to access the outside physical network.": "Use the default node network to access the outside physical network.",
+  "Using it as an uplink will remove its IP address and may disrupt network services.": "Using it as an uplink will remove its IP address and may disrupt network services.",
   "Value": "Value",
+  "Value must be between 1,280 and 9,000.": "Value must be between 1,280 and 9,000.",
   "View documentation": "View documentation",
   "View matching Nodes": "View matching Nodes",
   "VLAN details": "VLAN details",
