CNV-62006: validate interfaces names

--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -58,7 +58,6 @@
   "Copy YAML to clipboard": "Copy YAML to clipboard",
   "Create": "Create",
   "Create NodeNetworkConfigurationPolicy": "Create NodeNetworkConfigurationPolicy",
-  "Create NodeNetworkConfigurationPolicy error": "Create NodeNetworkConfigurationPolicy error",
   "Create policy": "Create policy",
   "Created at": "Created at",
   "Created interfaces cannot be removed": "Created interfaces cannot be removed",
@@ -79,7 +78,6 @@
   "Edit step": "Edit step",
   "Edit the STP in the YAML file": "Edit the STP in the YAML file",
   "Edit using YAML": "Edit using YAML",
-  "Edit YAML": "Edit YAML",
   "Empty bridge mapping is not allowed": "Empty bridge mapping is not allowed",
   "Enable STP": "Enable STP",
   "Enabled": "Enabled",
@@ -114,6 +112,7 @@
   "Key": "Key",
   "Labels": "Labels",
   "Learn more": "Learn more",
+  "Legend": "Legend",
   "List of network interfaces that should be created, modified, or removed, as a part of this policy.": "List of network interfaces that should be created, modified, or removed, as a part of this policy.",
   "LLDP": "LLDP",
   "LLDP system name": "LLDP system name",
@@ -126,11 +125,13 @@
   "More info: ": "More info: ",
   "MTU": "MTU",
   "Name": "Name",
+  "Name already in use by another interface": "Name already in use by another interface",
   "Neighbors": "Neighbors",
   "Network details": "Network details",
   "Network interface": "Network interface",
   "Network state": "Network state",
   "Network state controls whether the Linux bridge is active and participating in network traffic.": "Network state controls whether the Linux bridge is active and participating in network traffic.",
+  "Network types": "Network types",
   "No": "No",
   "No matching Nodes found for the labels": "No matching Nodes found for the labels",
   "No NodeNetworkConfigurationPolicy defined yet": "No NodeNetworkConfigurationPolicy defined yet",
