--- a/locales/en/plugin__nmstate-console-plugin.json
+++ b/locales/en/plugin__nmstate-console-plugin.json
@@ -181,7 +181,7 @@
   "Number of nodes matched": "Number of nodes matched",
   "One active, others standby, simple": "One active, others standby, simple",
   "Open vSwitch bridge mapping": "Open vSwitch bridge mapping",
-  "Open vSwitch LSB - source load balancing": "Open vSwitch LSB - source load balancing",
+  "Open vSwitch SLB - source load balancing": "Open vSwitch SLB - source load balancing",
   "Other network type": "Other network type",
   "Overlapping nodes": "Overlapping nodes",
   "OVN localnet name": "OVN localnet name",
@@ -239,7 +239,7 @@
   "The largest size of a data packet, in bytes, that can be transmitted across this network. It is critical that the entire underlying physical network infrastructure also supports the same or larger MTU size to avoid packet fragmentation and connectivity issues.": "The largest size of a data packet, in bytes, that can be transmitted across this network. It is critical that the entire underlying physical network infrastructure also supports the same or larger MTU size to avoid packet fragmentation and connectivity issues.",
   "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.": "The Open vSwitch bridge mapping is a list of Open vSwitch bridges and the physical interfaces that are connected to them.",
   "The selected secondary interface is configured with an IP address on some of the nodes.": "The selected secondary interface is configured with an IP address on some of the nodes.",
-  "These network interfaces will be bonded together. The list contains unused network interfaces available on all of the selected nodes.<1></1>Unused network interfaces available on all of the selected nodes.": "These network interfaces will be bonded together. The list contains unused network interfaces available on all of the selected nodes.<1></1>Unused network interfaces available on all of the selected nodes.",
+  "These network interfaces will be bonded together. The list contains unused network interfaces available on all of the selected nodes.": "These network interfaces will be bonded together. The list contains unused network interfaces available on all of the selected nodes.",
   "This allows you to specify how the ethernet interface obtains an IPv4 address—either dynamically (DHCP) or by assigning a static IP and subnet.": "This allows you to specify how the ethernet interface obtains an IPv4 address—either dynamically (DHCP) or by assigning a static IP and subnet.",
   "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to": "This is the list of ports to copy MAC address from. Select one of the matched ports this policy will apply to",
   "This name is already in use. Use a different name to continue.": "This name is already in use. Use a different name to continue.",
