--- a/locales/es/plugin__nmstate-console-plugin.json
+++ b/locales/es/plugin__nmstate-console-plugin.json
@@ -2,14 +2,19 @@
   "(IPv4)": "(IPv4)",
   "{{annotationsCount}} Annotations": "{{annotationsCount}} Annotations",
   "{{count}} aborted enactments_one": "{{count}} aborted enactments",
+  "{{count}} aborted enactments_many": "{{count}} aborted enactments",
   "{{count}} aborted enactments_other": "{{count}} aborted enactments",
   "{{count}} available enactments_one": "{{count}} available enactments",
+  "{{count}} available enactments_many": "{{count}} available enactments",
   "{{count}} available enactments_other": "{{count}} available enactments",
   "{{count}} failing enactments_one": "{{count}} failing enactments",
+  "{{count}} failing enactments_many": "{{count}} failing enactments",
   "{{count}} failing enactments_other": "{{count}} failing enactments",
   "{{count}} pending enactments_one": "{{count}} pending enactments",
+  "{{count}} pending enactments_many": "{{count}} pending enactments",
   "{{count}} pending enactments_other": "{{count}} pending enactments",
   "{{count}} progressing enactments_one": "{{count}} progressing enactments",
+  "{{count}} progressing enactments_many": "{{count}} progressing enactments",
   "{{count}} progressing enactments_other": "{{count}} progressing enactments",
   "{{interfaceType}} name": "{{interfaceType}} name",
   "{{label}} name": "{{label}} name",
